5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1674_1107.log
== TEST (2019-05-01 18:38:17) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))

if(h!=0)or(h!=1)or(h!=2)or(h!=3)or(h!=4)or(h!=5)or(h!=6):
	print("A entrada",h,"eh invalida")
elif(((h+f)%7)==0):
	print("Hoje eh domingo e o dia futuro eh")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:39:33) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))

if(h!=0)or(h!=1)or(h!=2)or(h!=3)or(h=!4)or(h!=5)or(h!=6):
	print("A entrada",h,"eh invalida")
elif(((h+f)%7)==0):
	print("Hoje eh domingo e o dia futuro eh")
-- ERROR:
File "XXXX", line 4
    if(h!=0)or(h!=1)or(h!=2)or(h!=3)or(h=!4)or(h!=5)or(h!=6):
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:39:41) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))

if(h!=0)or(h!=1)or(h!=2)or(h!=3)or(h!=4)or(h!=5)or(h!=6):
	print("A entrada",h,"eh invalida")
elif(((h+f)%7)==0):
	print("Hoje eh domingo e o dia futuro eh")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:50:46) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))

if(h!=0)or(h!=1)or(h!=2)or(h!=3)or(h!=4)or(h!=5)or(h!=6):
	print("puta que pario")
-- OUTPUT:
puta que pario
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:51:35) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))

if(h!=0)or(h!=1)or(h!=2)or(h!=3)or(h!=4)or(h!=5)or(h!=6):
	print("puta que pario")
else:
	print("wsiqwuhdiwq")
-- OUTPUT:
puta que pario
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:52:18) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))

if(h!=0)and(h!=1)and(h!=2)and(h!=3)and(h!=4)and(h!=5)and(h!=6):
	print("puta que pario")
else:
	print("wsiqwuhdiwq")
-- OUTPUT:
puta que pario
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:06:41) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
dom=0
seg=1
ter=2
qua=3
qui=4
sex=5
sab=6
if(h!=0)and(h!=1)and(h!=2)and(h!=3)and(h!=4)and(h!=5)and(h!=6):
	print("A entrada",h,"eh invalida")
else:
	print("wsiqwuhdiwq")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:11:59) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))

if(h!=0)and(h!=1)and(h!=2)and(h!=3)and(h!=4)and(h!=5)and(h!=6):
	print("A entrada",h,"eh invalida")
	elif(h==0):
		x="domingo"
	elif(h==1):
	 	x="segunda"
	elif(h==2):
	 	x="terca"
	elif(h==3):
	 	x="quarta"
	elif(h==4):
	 	x="quinta"
	elif(h==5):
	 	x="sexta"
	elif(h==6):
	 	x="sabado"
if(h<0)and(f<0):
	print("A entrada",h,"eh invalida")
		
-- ERROR:
File "XXXX", line 6
    elif(h==0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:12:02) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))

if(h!=0)and(h!=1)and(h!=2)and(h!=3)and(h!=4)and(h!=5)and(h!=6):
	print("A entrada",h,"eh invalida")
	elif(h==0):
		x="domingo"
	elif(h==1):
	 	x="segunda"
	elif(h==2):
	 	x="terca"
	elif(h==3):
	 	x="quarta"
	elif(h==4):
	 	x="quinta"
	elif(h==5):
	 	x="sexta"
	elif(h==6):
	 	x="sabado"
if(h<0)and(f<0):
	print("A entrada",h,"eh invalida")
		
-- ERROR:
File "XXXX", line 6
    elif(h==0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:12:40) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))

if(h!=0)and(h!=1)and(h!=2)and(h!=3)and(h!=4)and(h!=5)and(h!=6):
	print("A entrada",h,"eh invalida")
	elif(h==0):
		x="domingo"
		elif(h==1):
	 		x="segunda"
		elif(h==2):
	 		x="terca"
		elif(h==3):
	 		x="quarta"
		elif(h==4):
	 		x="quinta"
		elif(h==5):
	 		x="sexta"
		elif(h==6):
	 		x="sabado"
if(h<0)and(f<0):
	print("A entrada",h,"eh invalida")
		
-- ERROR:
File "XXXX", line 6
    elif(h==0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:12:44) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))

if(h!=0)and(h!=1)and(h!=2)and(h!=3)and(h!=4)and(h!=5)and(h!=6):
	print("A entrada",h,"eh invalida")
	elif(h==0):
		x="domingo"
		elif(h==1):
	 		x="segunda"
		elif(h==2):
	 		x="terca"
		elif(h==3):
	 		x="quarta"
		elif(h==4):
	 		x="quinta"
		elif(h==5):
	 		x="sexta"
		elif(h==6):
	 		x="sabado"
if(h<0)and(f<0):
	print("A entrada",h,"eh invalida")
		
-- ERROR:
File "XXXX", line 6
    elif(h==0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:14:04) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))

if(h!=0)and(h!=1)and(h!=2)and(h!=3)and(h!=4)and(h!=5)and(h!=6):
	print("A entrada",h,"eh invalida")
elif(h==0):
		x="domingo"
		elif(h==1):
	 		x="segunda"
		elif(h==2):
	 		x="terca"
		elif(h==3):
	 		x="quarta"
		elif(h==4):
	 		x="quinta"
		elif(h==5):
	 		x="sexta"
		elif(h==6):
	 		x="sabado"
if(h<0)and(f<0):
	print("A entrada",h,"eh invalida")
		
-- ERROR:
File "XXXX", line 8
    elif(h==1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:14:51) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))

if(h!=0)and(h!=1)and(h!=2)and(h!=3)and(h!=4)and(h!=5)and(h!=6):
	print("A entrada",h,"eh invalida")
elif(h==0):
	x="domingo"
elif(h==1):
	 		x="segunda"
elif(h==2):
	 		x="terca"
elif(h==3):
	 		x="quarta"
elif(h==4):
	 		x="quinta"
elif(h==5):
	 		x="sexta"
elif(h==6):
	 		x="sabado"
if(h<0)and(f<0):
	print("A entrada",h,"eh invalida")
		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:17:30) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))

if(h!=0)and(h!=1)and(h!=2)and(h!=3)and(h!=4)and(h!=5)and(h!=6)and(h<0)and(f<0):
	print("A entrada",h,"eh invalida")
elif(h==0):
	x="domingo"
elif(h==1):
	 		x="segunda"
elif(h==2):
	 		x="terca"
elif(h==3):
	 		x="quarta"
elif(h==4):
	 		x="quinta"
elif(h==5):
	 		x="sexta"
elif(h==6):
	 		x="sabado"

		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:18:00) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))

if(h!=0)and(h!=1)and(h!=2)and(h!=3)and(h!=4)and(h!=5)and(h!=6)and(h<0)and(f<0):
	print("A entrada",h,"eh invalida")
elif(h==0):
	x="domingo"
elif(h==1):
	 		x="segunda"
elif(h==2):
	 		x="terca"
elif(h==3):
	 		x="quarta"
elif(h==4):
	 		x="quinta"
elif(h==5):
	 		x="sexta"
elif(h==6):
	 		x="sabado"

		print(x)
-- ERROR:
File "XXXX", line 21
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:18:09) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))

if(h!=0)and(h!=1)and(h!=2)and(h!=3)and(h!=4)and(h!=5)and(h!=6)and(h<0)and(f<0):
	print("A entrada",h,"eh invalida")
elif(h==0):
	x="domingo"
elif(h==1):
	 		x="segunda"
elif(h==2):
	 		x="terca"
elif(h==3):
	 		x="quarta"
elif(h==4):
	 		x="quinta"
elif(h==5):
	 		x="sexta"
elif(h==6):
	 		x="sabado"

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:19:49) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))

if(h!=0)and(h!=1)and(h!=2)and(h!=3)and(h!=4)and(h!=5)and(h!=6)and(h<0)and(f<0):
	print("A entrada",h,"eh invalida")
elif(h==0):
	x="domingo"
elif(h==1):
	 		x="segunda"
elif(h==2):
	 		x="terca"
elif(h==3):
	 		x="quarta"
elif(h==4):
	 		x="quinta"
elif(h==5):
	 		x="sexta"
elif(h==6):
	 		x="sabado"


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:19:52) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))

if(h!=0)and(h!=1)and(h!=2)and(h!=3)and(h!=4)and(h!=5)and(h!=6)and(h<0)and(f<0):
	print("A entrada",h,"eh invalida")
elif(h==0):
	x="domingo"
elif(h==1):
	 		x="segunda"
elif(h==2):
	 		x="terca"
elif(h==3):
	 		x="quarta"
elif(h==4):
	 		x="quinta"
elif(h==5):
	 		x="sexta"
elif(h==6):
	 		x="sabado"


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:31:36) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
fu=(h+f)%7
if(h>=0)and(h<=6):
	if(f>0):
		elif(h==0):
			x="domingo"
		elif(h==1):
					x="segunda"
		elif(h==2):
					x="terca"
		elif(h==3):
					x="quarta"
		elif(h==4):
					x="quinta"
		elif(h==5):
					x="sexta"
		elif(h==6):
					x="sabado"
if(fu==0):
			y="domingo"
elif(fu==1):
			y="segunda"
elif(fu==2):
			y="terca"
elif(fu==3):
			y="quarta"
elif(fu==4):
			y="quinta"
elif(fu==5):
			y="sexta"
elif(fu==6):
			y="sabado"
		
print("Hoje eh",x,"e o dia futuro eh",y)
-- EXECUTION TIME:
0.136475
-- ERROR:
  File "/home/codebench/codes/1674/1107/main.py", line 6
    elif(h==0):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:31:43) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
fu=(h+f)%7
if(h>=0)and(h<=6):
	if(f>0):
		elif(h==0):
			x="domingo"
		elif(h==1):
					x="segunda"
		elif(h==2):
					x="terca"
		elif(h==3):
					x="quarta"
		elif(h==4):
					x="quinta"
		elif(h==5):
					x="sexta"
		elif(h==6):
					x="sabado"
if(fu==0):
			y="domingo"
elif(fu==1):
			y="segunda"
elif(fu==2):
			y="terca"
elif(fu==3):
			y="quarta"
elif(fu==4):
			y="quinta"
elif(fu==5):
			y="sexta"
elif(fu==6):
			y="sabado"
		
print("Hoje eh",x,"e o dia futuro eh",y)
-- ERROR:
File "XXXX", line 6
    elif(h==0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:32:41) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
fu=(h+f)%7
if(h>=0)and(h<=6):
	if(f>0):
	elif(h==0):
				x="domingo"
	elif(h==1):
						x="segunda"
	elif(h==2):
						x="terca"
	elif(h==3):
						x="quarta"
	elif(h==4):
						x="quinta"
	elif(h==5):
						x="sexta"
	elif(h==6):
						x="sabado"
if(fu==0):
			y="domingo"
elif(fu==1):
			y="segunda"
elif(fu==2):
			y="terca"
elif(fu==3):
			y="quarta"
elif(fu==4):
			y="quinta"
elif(fu==5):
			y="sexta"
elif(fu==6):
			y="sabado"
		
print("Hoje eh",x,"e o dia futuro eh",y)
-- ERROR:
File "XXXX", line 6
    elif(h==0):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:33:37) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
fu=(h+f)%7
if(h>=0)and(h<=6):
	if(f>0):
	elif(h==0):
		x="domingo"
	elif(h==1):
		x="segunda"
	elif(h==2):
		x="terca"
	elif(h==3):
		x="quarta"
	elif(h==4):
		x="quinta"
	elif(h==5):
		x="sexta"
	elif(h==6):
		x="sabado"
if(fu==0):
			y="domingo"
elif(fu==1):
			y="segunda"
elif(fu==2):
			y="terca"
elif(fu==3):
			y="quarta"
elif(fu==4):
			y="quinta"
elif(fu==5):
			y="sexta"
elif(fu==6):
			y="sabado"
		
print("Hoje eh",x,"e o dia futuro eh",y)
-- ERROR:
File "XXXX", line 6
    elif(h==0):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:35:02) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
fu=(h+f)%7
if(h>=0)and(h<=6):
	if(f>0):
		if(h==0):
			x="domingo"
		elif(h==1):
			x="segunda"
		elif(h==2):
			x="terca"
		elif(h==3):
			x="quarta"
		elif(h==4):
			x="quinta"
		elif(h==5):
			x="sexta"
		elif(h==6):
			x="sabado"
if(fu==0):
			y="domingo"
elif(fu==1):
			y="segunda"
elif(fu==2):
			y="terca"
elif(fu==3):
			y="quarta"
elif(fu==4):
			y="quinta"
elif(fu==5):
			y="sexta"
elif(fu==6):
			y="sabado"
		
print("Hoje eh",x,"e o dia futuro eh",y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 35, in <module>
    print("Hoje eh",x,"e o dia futuro eh",y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:35:23) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
fu=(h+f)%7
if(h>=0)and(h<=6):
	if(f>0):
		if(h==0):
			x="domingo"
		elif(h==1):
			x="segunda"
		elif(h==2):
			x="terca"
		elif(h==3):
			x="quarta"
		elif(h==4):
			x="quinta"
		elif(h==5):
			x="sexta"
		elif(h==6):
			x="sabado"
if(fu==0):
			y="domingo"
elif(fu==1):
			y="segunda"
elif(fu==2):
			y="terca"
elif(fu==3):
			y="quarta"
elif(fu==4):
			y="quinta"
elif(fu==5):
			y="sexta"
elif(fu==6):
			y="sabado"
		
print("Hoje eh",x,"e o dia futuro eh",y)
-- EXECUTION TIME:
0.174571
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1107/main.py", line 35, in <module>
    print("Hoje eh",x,"e o dia futuro eh",y)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:35:29) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
fu=(h+f)%7
if(h>=0)and(h<=6):
	if(f>0):
		if(h==0):
			x="domingo"
		elif(h==1):
			x="segunda"
		elif(h==2):
			x="terca"
		elif(h==3):
			x="quarta"
		elif(h==4):
			x="quinta"
		elif(h==5):
			x="sexta"
		elif(h==6):
			x="sabado"
if(fu==0):
			y="domingo"
elif(fu==1):
			y="segunda"
elif(fu==2):
			y="terca"
elif(fu==3):
			y="quarta"
elif(fu==4):
			y="quinta"
elif(fu==5):
			y="sexta"
elif(fu==6):
			y="sabado"
		
print("Hoje eh",x,"e o dia futuro eh",y)
-- EXECUTION TIME:
0.205172
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1107/main.py", line 35, in <module>
    print("Hoje eh",x,"e o dia futuro eh",y)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:39:10) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
fu=(h+f)%7
if(h>=0)and(h<=6):
	if(f>0):
		if(h==0):
			x="domingo"
		elif(h==1):
			x="segunda"
		elif(h==2):
			x="terca"
		elif(h==3):
			x="quarta"
		elif(h==4):
			x="quinta"
		elif(h==5):
			x="sexta"
		elif(h==6):
			x="sabado"
else:
	print("A entrada",h,"eh invalida")
	else:
		print("A entrada",f,"eh invalida")
if(fu==0):
			y="domingo"
elif(fu==1):
			y="segunda"
elif(fu==2):
			y="terca"
elif(fu==3):
			y="quarta"
elif(fu==4):
			y="quinta"
elif(fu==5):
			y="sexta"
elif(fu==6):
			y="sabado"
		
print("Hoje eh",x,"e o dia futuro eh",y)
-- ERROR:
File "XXXX", line 22
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:39:57) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
fu=(h+f)%7
if(h>=0)and(h<=6):
	if(f>0):
		if(h==0):
			x="domingo"
		elif(h==1):
			x="segunda"
		elif(h==2):
			x="terca"
		elif(h==3):
			x="quarta"
		elif(h==4):
			x="quinta"
		elif(h==5):
			x="sexta"
		elif(h==6):
			x="sabado"
		else:
			print("A entrada",f,"eh invalida")	
else:
	print("A entrada",h,"eh invalida")
if(fu==0):
			y="domingo"
elif(fu==1):
			y="segunda"
elif(fu==2):
			y="terca"
elif(fu==3):
			y="quarta"
elif(fu==4):
			y="quinta"
elif(fu==5):
			y="sexta"
elif(fu==6):
			y="sabado"
		
print("Hoje eh",x,"e o dia futuro eh",y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 39, in <module>
    print("Hoje eh",x,"e o dia futuro eh",y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:40:13) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
fu=(h+f)%7
if(h>=0)and(h<=6):
	if(f>0):
		if(h==0):
			x="domingo"
		elif(h==1):
			x="segunda"
		elif(h==2):
			x="terca"
		elif(h==3):
			x="quarta"
		elif(h==4):
			x="quinta"
		elif(h==5):
			x="sexta"
		elif(h==6):
			x="sabado"
		else:
			print("A entrada",f,"eh invalida")	
else:
	print("A entrada",h,"eh invalida")
if(fu==0):
			y="domingo"
elif(fu==1):
			y="segunda"
elif(fu==2):
			y="terca"
elif(fu==3):
			y="quarta"
elif(fu==4):
			y="quinta"
elif(fu==5):
			y="sexta"
elif(fu==6):
			y="sabado"
		
print("Hoje eh",x,"e o dia futuro eh",y)
-- EXECUTION TIME:
0.196896
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1107/main.py", line 39, in <module>
    print("Hoje eh",x,"e o dia futuro eh",y)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:43:09) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
fu=(h+f)%7
if(h>=0)and(h<=6):
	if(f>0):
		if(h==0):
			x="domingo"
		elif(h==1):
			x="segunda"
		elif(h==2):
			x="terca"
		elif(h==3):
			x="quarta"
		elif(h==4):
			x="quinta"
		elif(h==5):
			x="sexta"
		elif(h==6):
			x="sabado"
if(fu==0):
			y="domingo"
elif(fu==1):
			y="segunda"
elif(fu==2):
			y="terca"
elif(fu==3):
			y="quarta"
elif(fu==4):
			y="quinta"
elif(fu==5):
			y="sexta"
elif(fu==6):
			y="sabado"
else:
	print("A entrada",h,"eh invalida")
	else:
		print("A entrada",f,"eh invalida")	

	
			print("Hoje eh",x,"e o dia futuro eh",y)

-- ERROR:
File "XXXX", line 36
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:43:46) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
fu=(h+f)%7
if(h>=0)and(h<=6):
	if(f>0):
		if(h==0):
			x="domingo"
		elif(h==1):
			x="segunda"
		elif(h==2):
			x="terca"
		elif(h==3):
			x="quarta"
		elif(h==4):
			x="quinta"
		elif(h==5):
			x="sexta"
		elif(h==6):
			x="sabado"
if(fu==0):
			y="domingo"
elif(fu==1):
			y="segunda"
elif(fu==2):
			y="terca"
elif(fu==3):
			y="quarta"
elif(fu==4):
			y="quinta"
elif(fu==5):
			y="sexta"
elif(fu==6):
			y="sabado"
else:
	print("A entrada",h,"eh invalida")
	else:
		print("A entrada",f,"eh invalida")	

	
			print("Hoje eh",x,"e o dia futuro eh",y)

-- ERROR:
File "XXXX", line 36
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:44:21) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
fu=(h+f)%7
if(h>=0)and(h<=6):
	if(f>0):
		if(h==0):
			x="domingo"
		elif(h==1):
			x="segunda"
		elif(h==2):
			x="terca"
		elif(h==3):
			x="quarta"
		elif(h==4):
			x="quinta"
		elif(h==5):
			x="sexta"
		elif(h==6):
			x="sabado"
if(fu==0):
			y="domingo"
elif(fu==1):
			y="segunda"
elif(fu==2):
			y="terca"
elif(fu==3):
			y="quarta"
elif(fu==4):
			y="quinta"
elif(fu==5):
			y="sexta"
elif(fu==6):
			y="sabado"
	else:
		print("A entrada",f,"eh invalida")	
else:
	print("A entrada",h,"eh invalida")

			print("Hoje eh",x,"e o dia futuro eh",y)

-- ERROR:
File "XXXX", line 34
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:44:38) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
fu=(h+f)%7
if(h>=0)and(h<=6):
	if(f>0):
		if(h==0):
			x="domingo"
		elif(h==1):
			x="segunda"
		elif(h==2):
			x="terca"
		elif(h==3):
			x="quarta"
		elif(h==4):
			x="quinta"
		elif(h==5):
			x="sexta"
		elif(h==6):
			x="sabado"
if(fu==0):
			y="domingo"
elif(fu==1):
			y="segunda"
elif(fu==2):
			y="terca"
elif(fu==3):
			y="quarta"
elif(fu==4):
			y="quinta"
elif(fu==5):
			y="sexta"
elif(fu==6):
			y="sabado"

else:
	print("A entrada",h,"eh invalida")

			print("Hoje eh",x,"e o dia futuro eh",y)

-- ERROR:
File "XXXX", line 38
    print("Hoje eh",x,"e o dia futuro eh",y)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:45:13) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
fu=(h+f)%7
if(h>=0)and(h<=6):
	if(f>0):
		if(h==0):
			x="domingo"
		elif(h==1):
			x="segunda"
		elif(h==2):
			x="terca"
		elif(h==3):
			x="quarta"
		elif(h==4):
			x="quinta"
		elif(h==5):
			x="sexta"
		elif(h==6):
			x="sabado"
if(fu==0):
			y="domingo"
elif(fu==1):
			y="segunda"
elif(fu==2):
			y="terca"
elif(fu==3):
			y="quarta"
elif(fu==4):
			y="quinta"
elif(fu==5):
			y="sexta"
elif(fu==6):
			y="sabado"
	print("Hoje eh",x,"e o dia futuro eh",y)
else:
	print("A entrada",h,"eh invalida")

		

-- ERROR:
File "XXXX", line 34
    print("Hoje eh",x,"e o dia futuro eh",y)
                                           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:45:20) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
fu=(h+f)%7
if(h>=0)and(h<=6):
	if(f>0):
		if(h==0):
			x="domingo"
		elif(h==1):
			x="segunda"
		elif(h==2):
			x="terca"
		elif(h==3):
			x="quarta"
		elif(h==4):
			x="quinta"
		elif(h==5):
			x="sexta"
		elif(h==6):
			x="sabado"
if(fu==0):
			y="domingo"
elif(fu==1):
			y="segunda"
elif(fu==2):
			y="terca"
elif(fu==3):
			y="quarta"
elif(fu==4):
			y="quinta"
elif(fu==5):
			y="sexta"
elif(fu==6):
			y="sabado"
		print("Hoje eh",x,"e o dia futuro eh",y)
else:
	print("A entrada",h,"eh invalida")

		

-- ERROR:
File "XXXX", line 34
    print("Hoje eh",x,"e o dia futuro eh",y)
                                           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:45:27) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
fu=(h+f)%7
if(h>=0)and(h<=6):
	if(f>0):
		if(h==0):
			x="domingo"
		elif(h==1):
			x="segunda"
		elif(h==2):
			x="terca"
		elif(h==3):
			x="quarta"
		elif(h==4):
			x="quinta"
		elif(h==5):
			x="sexta"
		elif(h==6):
			x="sabado"
if(fu==0):
			y="domingo"
elif(fu==1):
			y="segunda"
elif(fu==2):
			y="terca"
elif(fu==3):
			y="quarta"
elif(fu==4):
			y="quinta"
elif(fu==5):
			y="sexta"
elif(fu==6):
			y="sabado"
			print("Hoje eh",x,"e o dia futuro eh",y)
else:
	print("A entrada",h,"eh invalida")

		

-- ERROR:
File "XXXX", line 34
    print("Hoje eh",x,"e o dia futuro eh",y)
                                           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:47:13) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
fu=(h+f)%7
if(h>=0)and(h<=6):
	if(f>0):
		if(h==0):
			x="domingo"
		elif(h==1):
			x="segunda"
		elif(h==2):
			x="terca"
		elif(h==3):
			x="quarta"
		elif(h==4):
			x="quinta"
		elif(h==5):
			x="sexta"
		elif(h==6):
			x="sabado"
		if(fu==0):
					y="domingo"
		elif(fu==1):
					y="segunda"
		elif(fu==2):
					y="terca"
		elif(fu==3):
					y="quarta"
		elif(fu==4):
					y="quinta"
		elif(fu==5):
					y="sexta"
		elif(fu==6):
					y="sabado"
print("Hoje eh",x,"e o dia futuro eh",y)
	else:
		print("A entrada",f,"eh invalida")	

else:
	print("A entrada",h,"eh invalida")

		

-- ERROR:
File "XXXX", line 35
    else:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:47:17) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
fu=(h+f)%7
if(h>=0)and(h<=6):
	if(f>0):
		if(h==0):
			x="domingo"
		elif(h==1):
			x="segunda"
		elif(h==2):
			x="terca"
		elif(h==3):
			x="quarta"
		elif(h==4):
			x="quinta"
		elif(h==5):
			x="sexta"
		elif(h==6):
			x="sabado"
		if(fu==0):
					y="domingo"
		elif(fu==1):
					y="segunda"
		elif(fu==2):
					y="terca"
		elif(fu==3):
					y="quarta"
		elif(fu==4):
					y="quinta"
		elif(fu==5):
					y="sexta"
		elif(fu==6):
					y="sabado"
print("Hoje eh",x,"e o dia futuro eh",y)
	else:
		print("A entrada",f,"eh invalida")	

else:
	print("A entrada",h,"eh invalida")

		

-- ERROR:
File "XXXX", line 35
    else:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:47:28) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
fu=(h+f)%7
if(h>=0)and(h<=6):
	if(f>0):
		if(h==0):
			x="domingo"
		elif(h==1):
			x="segunda"
		elif(h==2):
			x="terca"
		elif(h==3):
			x="quarta"
		elif(h==4):
			x="quinta"
		elif(h==5):
			x="sexta"
		elif(h==6):
			x="sabado"
		if(fu==0):
					y="domingo"
		elif(fu==1):
					y="segunda"
		elif(fu==2):
					y="terca"
		elif(fu==3):
					y="quarta"
		elif(fu==4):
					y="quinta"
		elif(fu==5):
					y="sexta"
		elif(fu==6):
					y="sabado"
print("Hoje eh",x,"e o dia futuro eh",y)
	
else:
	print("A entrada",h,"eh invalida")

		

-- ERROR:
File "XXXX", line 36
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:47:52) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
fu=(h+f)%7
if(h>=0)and(h<=6):
	if(f>0):
		if(h==0):
			x="domingo"
		elif(h==1):
			x="segunda"
		elif(h==2):
			x="terca"
		elif(h==3):
			x="quarta"
		elif(h==4):
			x="quinta"
		elif(h==5):
			x="sexta"
		elif(h==6):
			x="sabado"
		if(fu==0):
					y="domingo"
		elif(fu==1):
					y="segunda"
		elif(fu==2):
					y="terca"
		elif(fu==3):
					y="quarta"
		elif(fu==4):
					y="quinta"
		elif(fu==5):
					y="sexta"
		elif(fu==6):
					y="sabado"
		print("Hoje eh",x,"e o dia futuro eh",y)
	
else:
	print("A entrada",h,"eh invalida")

		

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:48:04) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
fu=(h+f)%7
if(h>=0)and(h<=6):
	if(f>0):
		if(h==0):
			x="domingo"
		elif(h==1):
			x="segunda"
		elif(h==2):
			x="terca"
		elif(h==3):
			x="quarta"
		elif(h==4):
			x="quinta"
		elif(h==5):
			x="sexta"
		elif(h==6):
			x="sabado"
		if(fu==0):
					y="domingo"
		elif(fu==1):
					y="segunda"
		elif(fu==2):
					y="terca"
		elif(fu==3):
					y="quarta"
		elif(fu==4):
					y="quinta"
		elif(fu==5):
					y="sexta"
		elif(fu==6):
					y="sabado"
		print("Hoje eh",x,"e o dia futuro eh",y)
	else:
		print("A entrada",f,"eh invalida")	

else:
	print("A entrada",h,"eh invalida")

		

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:48:12) 
-- CODE:
h=int(input("entre com o dia de hoje "))
f=int(input("entre com o numero de dias futuro "))
fu=(h+f)%7
if(h>=0)and(h<=6):
	if(f>0):
		if(h==0):
			x="domingo"
		elif(h==1):
			x="segunda"
		elif(h==2):
			x="terca"
		elif(h==3):
			x="quarta"
		elif(h==4):
			x="quinta"
		elif(h==5):
			x="sexta"
		elif(h==6):
			x="sabado"
		if(fu==0):
					y="domingo"
		elif(fu==1):
					y="segunda"
		elif(fu==2):
					y="terca"
		elif(fu==3):
					y="quarta"
		elif(fu==4):
					y="quinta"
		elif(fu==5):
					y="sexta"
		elif(fu==6):
					y="sabado"
		print("Hoje eh",x,"e o dia futuro eh",y)
	else:
		print("A entrada",f,"eh invalida")	

else:
	print("A entrada",h,"eh invalida")

		

-- EXECUTION TIME:
0.171136
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
